--- a/wp-content/themes/calidra/assets/css/style.css
+++ b/wp-content/themes/calidra/assets/css/style.css
@@ -124,6 +124,12 @@ body {
   line-height: 2rem;
 }
 
+@media screen and (max-width: 1024px) {
+  body {
+    overflow-x: hidden;
+  }
+}
+
 a, a:link, a:visited, a:focus {
   color: inherit;
   text-decoration: none;
@@ -515,10 +521,17 @@ footer .footer-bottom-border {
 
 .home-productos-item-cont {
   position: relative;
+  padding: 0;
   overflow: hidden;
 }
 
-@media screen and (min-width: 1024px) {
+@media screen and (min-width: 768px) {
+  .home-productos-item-cont .slider-item {
+    padding: 0 5px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
   .home-productos-item-cont .slider-item {
     padding: 0 15px;
   }
@@ -558,6 +571,12 @@ footer .footer-bottom-border {
   margin: 0 auto 30px;
 }
 
+@media screen and (min-width: 1024px) {
+  .home-productos-item-cont .home-productos-item .productos-icono {
+    width: 30%;
+  }
+}
+
 .home-productos-item-cont .home-productos-item .producto-titulo {
   font-family: "Century Gothic", sans-serif;
   font-style: italic;
@@ -567,6 +586,22 @@ footer .footer-bottom-border {
   text-align: center;
   width: 45%;
   margin: 0 auto;
+  min-height: 60px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+@media screen and (min-width: 1024px) {
+  .home-productos-item-cont .home-productos-item .producto-titulo {
+    width: 70%;
+  }
 }
 
 .home-productos-item-cont .home-productos-item .producto-separador {
