--- a/wp-content/themes/calidra/assets/css/style.css
+++ b/wp-content/themes/calidra/assets/css/style.css
@@ -1873,10 +1873,26 @@ footer .footer-bottom-border {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  width: 100%;
 }
 
 .seccion-template-productos-cont-image {
   padding: 20px;
+  overflow: hidden;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-line-pack: center;
+      align-content: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.seccion-template-productos-cont-image img {
+  height: 308px;
+  margin: 0 auto;
+  max-width: none;
 }
 
 .seccion-template-productos-cont-text {
