--- a/wp-content/themes/calidra/assets/css/style.scss
+++ b/wp-content/themes/calidra/assets/css/style.scss
@@ -1180,8 +1180,18 @@ footer{
             border: 1px solid $grey;
             display: flex;
             flex-direction: column;
+            width: 100%;
             &-image{
                 padding: 20px;
+                overflow: hidden;
+                display: flex;
+                align-content: center;
+                justify-content: center;
+                img{
+                    height: 308px;
+                    margin: 0 auto;
+                    max-width: none;
+                }
             }
             &-text{
                 color: #ffffff;
