--- a/wp-content/themes/calidra/assets/css/style.css
+++ b/wp-content/themes/calidra/assets/css/style.css
@@ -122,6 +122,7 @@ html {
 body {
   font-size: 1.4rem;
   line-height: 2rem;
+  font-family: "Century Gothic", sans-serif;
 }
 
 @media screen and (max-width: 1024px) {
@@ -219,7 +220,7 @@ footer .footer-bottom {
   color: #ffffff;
   font-size: 1.2rem;
   line-height: 1.8rem;
-  font-family: "Open Sans Condensed", sans-serif;
+  font-family: "Century Gothic", sans-serif;
   font-weight: bold;
 }
 
@@ -241,8 +242,8 @@ footer .footer-bottom-border {
 }
 
 .nav-container {
-  font-family: "Open Sans Condensed", sans-serif;
-  font-size: 1.5rem;
+  font-family: "Century Gothic", sans-serif;
+  font-size: 1.2rem;
   font-weight: bold;
   text-transform: uppercase;
 }
@@ -286,21 +287,25 @@ footer .footer-bottom-border {
       -ms-flex-align: center;
           align-items: center;
   padding: 20px 0;
+  width: 1300px;
+  max-width: 100%;
+  margin: 0 auto;
+  max-width: 95%;
 }
 
 .nav-container nav .logo {
   width: 30%;
 }
 
-@media screen and (max-width: 1023px) {
+@media screen and (max-width: 1199px) {
   .nav-container nav .logo {
     margin-left: 10px;
   }
 }
 
-@media screen and (min-width: 1024px) {
+@media screen and (min-width: 1200px) {
   .nav-container nav .logo {
-    width: 20%;
+    width: 15%;
   }
 }
 
@@ -309,20 +314,20 @@ footer .footer-bottom-border {
   z-index: 101;
 }
 
-@media screen and (min-width: 1024px) {
+@media screen and (min-width: 1200px) {
   .nav-container nav .burger {
     display: none;
   }
 }
 
-@media screen and (max-width: 1023px) {
+@media screen and (max-width: 1199px) {
   .nav-container nav .nav-ul.open {
     -webkit-transform: translate(0, 0);
             transform: translate(0, 0);
   }
 }
 
-@media screen and (max-width: 1023px) {
+@media screen and (max-width: 1199px) {
   .nav-container nav .nav-ul {
     display: block;
     width: 100%;
@@ -341,7 +346,7 @@ footer .footer-bottom-border {
   }
 }
 
-@media screen and (min-width: 1024px) {
+@media screen and (min-width: 1200px) {
   .nav-container nav .nav-ul {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -350,11 +355,11 @@ footer .footer-bottom-border {
         -ms-flex-pack: justify;
             justify-content: space-between;
     margin-left: 20px;
-    width: 80%;
+    width: 100%;
   }
 }
 
-@media screen and (max-width: 1023px) {
+@media screen and (max-width: 1199px) {
   .nav-container nav .nav-ul li {
     text-align: center;
     font-size: 2rem;
@@ -362,7 +367,7 @@ footer .footer-bottom-border {
   }
 }
 
-@media screen and (min-width: 1024px) {
+@media screen and (min-width: 1200px) {
   .nav-container nav .nav-ul li {
     margin: 0 10px;
   }
@@ -485,6 +490,10 @@ footer .footer-bottom-border {
   }
 }
 
+.home-productos-desc {
+  font-family: "Century Gothic", sans-serif;
+}
+
 @media screen and (min-width: 1024px) {
   .home-productos-desc {
     padding: 0 50px 0 0;
@@ -492,7 +501,6 @@ footer .footer-bottom-border {
 }
 
 .home-productos-desc h2 {
-  font-family: "Century Gothic", sans-serif;
   font-size: 3rem;
   line-height: 3rem;
   color: #3e3e3e;
@@ -508,7 +516,6 @@ footer .footer-bottom-border {
 }
 
 .home-productos-desc p {
-  font-family: "Lato", sans-serif;
   text-align: justify;
   font-size: 1.4rem;
 }
@@ -562,7 +569,7 @@ footer .footer-bottom-border {
   color: rgba(62, 62, 62, 0.5);
   font-size: 12rem;
   line-height: 12rem;
-  font-family: "Montserrat", sans-serif;
+  font-family: "Century Gothic", sans-serif;
 }
 
 .home-productos-item-cont .home-productos-item .productos-icono {
@@ -1155,7 +1162,7 @@ footer .footer-bottom-border {
 }
 
 .quienes-somos .corporativo-iniciativas-cont .contenedor .corporativo-iniciativas p {
-  font-family: "Lato", sans-serif;
+  font-family: "Century Gothic", sans-serif;
   font-size: 1.5rem;
   line-height: 2rem;
 }
@@ -1183,7 +1190,7 @@ footer .footer-bottom-border {
           flex-grow: 0;
   -ms-flex-negative: 0;
       flex-shrink: 0;
-  font-family: "Lato", sans-serif;
+  font-family: "Century Gothic", sans-serif;
 }
 
 @media screen and (min-width: 1024px) {
@@ -1366,7 +1373,7 @@ footer .footer-bottom-border {
 .colabora-nosotros-seccion .colabora-vacantes-cont .colabora-vacantes h3 {
   color: #ffffff;
   text-shadow: 1px 1px 8px rgba(0, 0, 0, 0.65);
-  font-family: "Montserrat", sans-serif;
+  font-family: "Century Gothic", sans-serif;
   font-weight: bold;
   font-size: 4rem;
   line-height: 4rem;
@@ -1384,7 +1391,7 @@ footer .footer-bottom-border {
 
 .colabora-nosotros-seccion .colabora-vacantes-cont .colabora-vacantes p {
   text-align: left;
-  font-family: "Lato", sans-serif;
+  font-family: "Century Gothic", sans-serif;
   color: #3e3e3e;
   max-width: 95%;
   margin: 20px auto 0;
@@ -1461,7 +1468,7 @@ footer .footer-bottom-border {
 
 .colabora-nosotros-seccion .colabora-creciendo-cont .colabora-creciendo .colabora-creciendo-int .colabora-creciendo-numeros .colabora-creciendo-numero-cont .colabora-creciendo-numero-int span {
   display: block;
-  font-family: "Montserrat", sans-serif;
+  font-family: "Century Gothic", sans-serif;
   font-size: 1.6rem;
   line-height: 1.3rem;
 }
@@ -1748,7 +1755,7 @@ footer .footer-bottom-border {
   max-width: 100%;
   margin: 0 auto;
   overflow: hidden;
-  font-family: "Lato", sans-serif;
+  font-family: "Century Gothic", sans-serif;
 }
 
 .usos-cotidianos-acordeon-item-body .usos-carousel-cont#limpieza .slider-navigation-previous, .usos-cotidianos-acordeon-item-body .usos-carousel-cont#limpieza .slider-navigation-next {
@@ -1914,7 +1921,7 @@ footer .footer-bottom-border {
 }
 
 .seccion-template-productos-cont-text p {
-  font-family: "Lato", sans-serif;
+  font-family: "Century Gothic", sans-serif;
   text-align: justify;
 }
 
@@ -1982,7 +1989,7 @@ footer .footer-bottom-border {
 .localizador-buscador-input input[type='text'] {
   padding: 10px 15px;
   color: #3e3e3e;
-  font-family: "Lato", sans-serif;
+  font-family: "Century Gothic", sans-serif;
   font-size: 1.6rem;
   line-height: 2.1rem;
   width: 80%;
@@ -1992,28 +1999,28 @@ footer .footer-bottom-border {
 
 .localizador-buscador-input input[type='text']::-webkit-input-placeholder {
   color: #3e3e3e;
-  font-family: "Lato", sans-serif;
+  font-family: "Century Gothic", sans-serif;
   font-size: 1.6rem;
   line-height: 2.1rem;
 }
 
 .localizador-buscador-input input[type='text']:-ms-input-placeholder {
   color: #3e3e3e;
-  font-family: "Lato", sans-serif;
+  font-family: "Century Gothic", sans-serif;
   font-size: 1.6rem;
   line-height: 2.1rem;
 }
 
 .localizador-buscador-input input[type='text']::-ms-input-placeholder {
   color: #3e3e3e;
-  font-family: "Lato", sans-serif;
+  font-family: "Century Gothic", sans-serif;
   font-size: 1.6rem;
   line-height: 2.1rem;
 }
 
 .localizador-buscador-input input[type='text']::placeholder {
   color: #3e3e3e;
-  font-family: "Lato", sans-serif;
+  font-family: "Century Gothic", sans-serif;
   font-size: 1.6rem;
   line-height: 2.1rem;
 }
@@ -2088,7 +2095,7 @@ footer .footer-bottom-border {
   background-size: contain;
   width: 100%;
   color: #ffffff;
-  font-family: "Lato", sans-serif;
+  font-family: "Century Gothic", sans-serif;
   text-align: center;
   padding: 60px 15px 30px;
   position: relative;
@@ -2363,7 +2370,7 @@ footer .footer-bottom-border {
 .blog-interior-meta {
   font-size: 1.2rem;
   line-height: 1.5rem;
-  font-family: "Lato", sans-serif;
+  font-family: "Century Gothic", sans-serif;
   margin: 10px 0;
 }
 
@@ -2376,7 +2383,7 @@ footer .footer-bottom-border {
 }
 
 .blog-interior-text {
-  font-family: "Lato", sans-serif;
+  font-family: "Century Gothic", sans-serif;
   text-align: justify;
   color: #3e3e3e;
 }
@@ -2438,7 +2445,7 @@ footer .footer-bottom-border {
   width: 800px;
   max-width: 100%;
   margin: 0 auto;
-  font-family: "Lato", sans-serif;
+  font-family: "Century Gothic", sans-serif;
   color: #3e3e3e;
   margin-top: 50px;
   margin-bottom: 50px;
@@ -2509,7 +2516,7 @@ footer .footer-bottom-border {
 
 .contacto-form-terminos {
   margin-top: 50px;
-  font-family: "Lato", sans-serif;
+  font-family: "Century Gothic", sans-serif;
 }
 
 .contacto-form-terminos input[type="checkbox"] {
@@ -2807,7 +2814,7 @@ footer .footer-bottom-border {
 }
 
 .producto-interior-cont-desc {
-  font-family: "Lato", sans-serif;
+  font-family: "Century Gothic", sans-serif;
   color: #3e3e3e;
   width: 800px;
   max-width: 100%;
@@ -2857,10 +2864,21 @@ footer .footer-bottom-border {
 
 .producto-interior-otros-cont-image {
   background-color: #ffffff;
+  overflow: hidden;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-line-pack: center;
+      align-content: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 .producto-interior-otros-cont-image img {
-  max-width: 80%;
+  height: 308px;
+  margin: 0 auto;
+  max-width: none;
 }
 
 .producto-interior-otros-cont-text {
