--- a/wp-content/themes/calidra/assets/css/style.css
+++ b/wp-content/themes/calidra/assets/css/style.css
@@ -2072,11 +2072,12 @@ footer .footer-bottom-border {
       -ms-flex-align: end;
           align-items: flex-end;
   margin-top: 50px;
+  position: relative;
 }
 
 @media screen and (min-width: 1024px) {
   .localizador-mapa {
-    height: 800px;
+    height: 600px;
   }
 }
 
@@ -2085,6 +2086,14 @@ footer .footer-bottom-border {
     margin-left: -1.5rem;
     margin-right: -1.5rem;
   }
+}
+
+.localizador-mapa-gmaps {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
 }
 
 .localizador-mapa-info {
@@ -2101,6 +2110,7 @@ footer .footer-bottom-border {
   position: relative;
   -webkit-transition: opacity 400ms ease-in-out;
   transition: opacity 400ms ease-in-out;
+  display: none;
 }
 
 @media screen and (min-width: 1024px) {
