--- a/wp-content/themes/calidra/assets/css/style.scss
+++ b/wp-content/themes/calidra/assets/css/style.scss
@@ -1289,12 +1289,20 @@ footer{
         display: flex;
         align-items: flex-end;
         margin-top: 50px;
+        position: relative;
         @include minWidth($lg){
-            height: 800px;
+            height: 600px;
         }
         @include maxWidth($lg - 1){
             margin-left: -1.5rem;
             margin-right: -1.5rem;
+        }
+        &-gmaps{
+            width: 100%;
+            height: 100%;
+            position: absolute;
+            top: 0;
+            left: 0;
         }
         &-info{
             background-color: $ultra-dark-grey;
@@ -1309,6 +1317,7 @@ footer{
             padding: 60px 15px 30px;
             position: relative;
             transition: opacity 400ms ease-in-out;
+            display: none;
             @include minWidth($lg){
                 padding: 60px 0 100px;
             }
